.metadata/.plugins/org.eclipse.cdt.ui/zaazy.build.log
14:07:17 **** Incremental Build of configuration Debug for project zaazy ****
make all 
Building file: ../src/zaazy.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/zaazy.d" -MT"src/zaazy.o" -o "src/zaazy.o" "../src/zaazy.c"
../src/zaazy.c: In function ‘main’:
../src/zaazy.c:26:2: error: expected ‘;’ before ‘}’ token
  }
  ^
../src/zaazy.c: At top level:
../src/zaazy.c:28:2: error: expected identifier or ‘(’ before ‘return’
  return EXIT_SUCCESS;
  ^~~~~~
src/subdir.mk:18: recipe for target 'src/zaazy.o' failed
make: *** [src/zaazy.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.

14:07:17 Build Failed. 4 errors, 0 warnings. (took 136ms)

